# llvm-project

./: .gitignore
mlir/examples/toy/Ch5/: toyc.cpp
mlir/include/mlir/Transforms/: Passes.h  Passes.td
mlir/lib/ExecutionEngine/: BenchmarkMttkrp.cpp  CMakeLists.txt  SparseTensorUtils.cpp
mlir/lib/Transforms/: CMakeLists.txt  LoopFusion.cpp  MyPass.cpp  SmallLoopFusion.cpp
mlir/test/: CMakeLists.txt
mlir/test/Integration/: benchmark_mttkrp.mlir  benchmark_mttkrp_gpu.mlir  mttkrp_gpu_launch.mlir
mlir/test/Transforms/: my-pass.mlir  small-loop-fusion.mlir
mlir/tools/: CMakeLists.txt
mlir/tools/jit-calc/: CMakeLists.txt  jit-calc.cpp
mlir/tools/try-stuff-out/: CMakeLists.txt  main.cpp
